--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -96,18 +96,13 @@ GTP_PRIVACY_RETRY_INTERVAL = 86400
 # SDK_WIFI (WWAN provided by legacy Modem)
 GTP_MODE=DISABLED
 
-#GTP_WAA valid modes:
-# DISABLED
-# BASIC
-GTP_WAA=DISABLED
-
 #SAP valid modes:
 # DISABLED
 # BASIC
 # PREMIUM
 # PREMIUM_ENV_AIDING
 # MODEM_DEFAULT
-SAP=MODEM_DEFAULT
+SAP=PREMIUM
 
 #FREE_WIFI_SCAN_INJECT valid modes:
 #DISABLED
@@ -156,7 +151,6 @@ USE_ZPP_IN_DBH = 0
 #FEATURE MASKS:
 # GTP-WIFI    0X03
 # GTP-MP-CELL 0xc00
-# GTP-WAA     0x100
 # SAP         0Xc0
 # ODCPI      0x1000
 # FREE_WIFI_SCAN_INJECT   0x2000
