--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -174,6 +174,8 @@ firmware_directories /vendor/firmware_mnt/image/
 /dev/qg                   0660  system     system
 /dev/qg_battery           0660  system     system
 
+/dev/goodix_fp            0660   system    system
+
 #qvr
 /dev/qvr_external_sensor_ioctl      0660  system  system
 /dev/bus/usb/*                      0660  root    usb
